# nfl-rushing

./: .env  README.md  docker-compose.yml
front-end/: package.json
front-end/src/: constants.ts  index.tsx  setupTests.ts
front-end/src/api/: index.ts
front-end/src/api/tests/: index.test.ts
front-end/src/app/: App.tsx
front-end/src/app/Inputs/: filter.tsx  inputs.tsx  sorting.tsx
front-end/src/app/Inputs/tests/: filter.test.tsx  inputs.test.tsx  sorting.test.tsx
front-end/src/app/Table/: pagination.tsx  table.tsx
front-end/src/app/Table/tests/: pagination.test.tsx  table.test.tsx  tableBody.test.tsx  tableHead.test.tsx
front-end/src/redux/: store.ts
front-end/src/redux/rushing/: actions.ts  reducer.ts  selectors.ts  thunk.ts  thunkHelper.ts  types.ts
front-end/src/redux/rushing/tests/: reducer.test.ts  selectors.test.ts  thunkHelpers.test.ts  thunks.test.ts
nginx/sites-enabled/: nfl_rushing
web/: Dockerfile  manage.py  pyproject.toml
web/nfl_rushing/: admin.py  api_views.py  apps.py  forms.py  models.py  urls.py  view_helpers.py  views.py
web/nfl_rushing/data/: fetch_nfl_rushing.py
web/nfl_rushing/fixtures/: test_data.json  test_pagination.json
web/nfl_rushing/migrations/: 0001_initial.py  0002_rushing_data.py
web/nfl_rushing/templates/nfl_rushing/: index.html
web/nfl_rushing/templatetags/: custom_tags.py
web/nfl_rushing/tests/: test_csv.py  test_filter_name.py  test_index.py  utils.py
web/rushing/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
web/templates/: base.html
(+7 files in other folders)
